syntax = "proto3";

package nexa.authorization.v1;
option go_package = "nexa/proto/generated/golang/authorization/v1";

import "google/protobuf/empty.proto";
import "common/paged.proto";

import "authorization/v1/role.proto";

service AuthorizationService {
  rpc CheckUserPermission(CheckUserRequest) returns (google.protobuf.Empty);
}

message CheckUserRequest {
  string user_id = 1;
  repeated string expected_permissions = 2;
}